--- a/angular/src/app/movie-form.component.html
+++ b/angular/src/app/movie-form.component.html
@@ -6,7 +6,15 @@
         <form (ngSubmit)="onSubmit()" #movieForm="ngForm">
             <div class="form-group">
                 <label for="title">Title</label>
-                <input type="text" class="form-control" id="title" required [(ngModel)]="model.title" name="title">
+                <input type="text" class="form-control" id="title" required [(ngModel)]="model.title" name="title" minlength="5" #title="ngModel">
+                <div *ngIf="title.invalid && (title.dirty || title.touched)" class="alert alert-danger">
+                        <div *ngIf="title.errors.required">
+                            Please enter a title before saving.
+                        </div>
+                        <div *ngIf="title.errors.minlength">
+                            Please enter a title with at least 5 characters.
+                        </div>
+                </div>
             </div>
 
             <div class="form-group">
